--- a/shooting/index.html
+++ b/shooting/index.html
@@ -1,13 +1,11 @@
 <!DOCTYPE html>
-<html lang="ja">
+<html lang="ja-jp">
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Shooting</title>
+    <meta charset="UTF-8">
+    <title>弾幕シューティング</title>
+    <script defer src="engine.js"></script>
+    <script defer src="danmaku.js"></script>
 </head>
 <body>
-<script src="script.js"></script>
-<script src="engine.js"></script>
 </body>
 </html>
