--- a/reversi/index.html
+++ b/reversi/index.html
@@ -1,17 +1,23 @@
 <!DOCTYPE html>
 <html lang="ja">
-  <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>オセロゲーム</title>
-    <link rel="stylesheet" href="style.css">
-  </head>
-  <body>
-    <div id="stage" class="stage"></div>
-    <div id="square-template" class="square">
-      <div class="stone"></div>
-    </div>
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>オセロゲーム</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+  <!-- 現在の手番を表示する -->
+  <p>現在の手番は<span id="current-turn" style="font-size: 20px;">黒</span>です</p>
+  <!-- 盤 -->
+  <div id="stage" class="stage"></div>
+  <!-- 各マスを描画するためのテンプレート -->
+  <div id="square-template" class="square">
+    <div class="stone"></div>
+  </div>
+  <!-- パスボタン -->
+  <button id="pass">パスする</button>
   <script src="script.js"></script>
-  </body>
+</body>
 </html>
