--- a/udemy/front-dev-tutorial-master/01_基礎知識/02_Inline要素とBlock要素について/start/index.html
+++ b/udemy/front-dev-tutorial-master/01_基礎知識/02_Inline要素とBlock要素について/start/index.html
@@ -10,7 +10,16 @@
 
 <body>
     <span>こんにちは！ 日本！</span>
-    <img src="image-1.jpg" alt="">
+    <div>こんにちは！ 日本！</div>
+    <span>こんにちは！ 日本！</span>
+    <span>こんにちは！ 日本！</span>
+    <!-- <div>こんにちは！ 日本！</div> -->
+
+    <style>
+        div {
+            background-color:  magenta;
+        }
+    </style>
 </body>
 
 </html>
