--- a/udemy/front-dev-tutorial-master/01_基礎知識/04_CSSの詳細度について/start/index.html
+++ b/udemy/front-dev-tutorial-master/01_基礎知識/04_CSSの詳細度について/start/index.html
@@ -10,12 +10,13 @@
 </head>
 
 <body>
-    <span id="first" class="cls">こんにちは！ 日本！</span>
-    <span>こんにちは！ 日本！</span>
-    <span>こんにちは！ 日本！</span>
-    <span>こんにちは！ 日本！</span>
-    <!-- <div>こんにちは！ 日本！</div> -->
-    <style></style>
+    <div class="parent">
+        <span id="first" class="cls">こんにちは！ 日本！</span>
+        <span>こんにちは！ 日本！</span>
+        <span>こんにちは！ 日本！</span>
+        <span>こんにちは！ 日本！</span>
+    </div>
+
 </body>
 
 </html>
