--- a/udemy/front-dev-tutorial-master/02_HTMLとCSSを極める（トランジション編）/060_背景色がスライドするボタン/start/index.html
+++ b/udemy/front-dev-tutorial-master/02_HTMLとCSSを極める（トランジション編）/060_背景色がスライドするボタン/start/index.html
@@ -9,7 +9,9 @@
 </head>
 <body>
     <div id="container">
-        <button class="btn">Button</button>
+        <button class="btn slide-bg">
+            <span></span>Button
+        </button>
     </div>
 </body>
 </html>
