--- a/udemy/front-dev-tutorial-master/02_HTMLとCSSを極める（トランジション編）/070_疑似要素について/start/index.html
+++ b/udemy/front-dev-tutorial-master/02_HTMLとCSSを極める（トランジション編）/070_疑似要素について/start/index.html
@@ -9,7 +9,9 @@
 </head>
 <body>
     <div id="container">
-        <button class="btn slide-bg"><span></span>Button</button>
+        <button class="btn slide-bg">
+            Button
+        </button>
     </div>
 </body>
 </html>
