--- a/udemy/front-dev-tutorial-master/02_HTMLとCSSを極める（トランジション編）/080_発展_3Dアニメーション/start/index.html
+++ b/udemy/front-dev-tutorial-master/02_HTMLとCSSを極める（トランジション編）/080_発展_3Dアニメーション/start/index.html
@@ -11,7 +11,9 @@
 
 <body>
     <div id="container">
-        <button class="btn slide-bg">Button</button>
+        <button class="btn cover-3d slide-bg">
+            <span>Button</span>
+        </button>
     </div>
 </body>
 
